--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -21,6 +21,7 @@ h3 {
 header {
   display: flex;
   align-items: center;
+  position: fixed;
   height: 64px;
   width: 100%;
   background-color: rgb(230, 229, 233);
@@ -41,7 +42,7 @@ header img {
 header span {
   font-size: 1.2rem;
   margin-left: 5px;
-  color: rgb(30, 26, 32);
+  color: rgb(28, 26, 34);
 }
 
 #colmar {
@@ -72,8 +73,10 @@ nav ul li {
   display: inline-flex;
   align-items: center;
   width: 100%;
-  background-color: rgb(30, 26, 32);
+  background-color: rgb(28, 26, 34);
   color: rgb(230, 229, 233);
+  margin-top: 64px;
+  border-bottom: solid 2px rgb(190, 189, 193);
 }
 
 .banner img {
@@ -93,14 +96,18 @@ nav ul li {
 
 .banner h3 {
   margin-bottom: 20px;
-  color: rgb(200, 199, 203);
+  color: rgb(190, 189, 193);
 }
 
 .banner .button {
   display: flex;
   justify-content: center;
-  width: 100px;
+  width: 150px;
   background-color: rgb(255, 148, 77);
-  padding: 8px;
+  padding: 8px 0;
   border-radius: 4px;
+  color: rgb(28, 26, 34);
+  font-weight: 500;
 }
+
+/* Information Section */
