--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -267,3 +267,86 @@ nav ul li {
   width: 100%;
   margin: 0 72px;
 }
+
+/* Thesis Section */
+.thesis {
+  background-color: rgb(230, 229, 233);
+}
+
+.thesis-headline {
+  width: 100%;
+  text-align: center;
+}
+
+.thesis-headline h2 {
+  text-align: center;
+  color: rgb(28, 26, 34);
+  padding: 32px 0;
+}
+
+.thesis-content {
+  display: inline-flex;
+  flex-direction: row;
+  width: 100%;
+  background-color: rgb(230, 229, 233);
+  padding-bottom: 32px;
+}
+
+.video {
+  display: inline-flex;
+  flex-direction: column;
+  width: 60%;
+  height: auto;
+  margin: 32px 10px 32px 24px;
+}
+
+.video video {
+  width: 100%;
+  margin-bottom: 24px;
+}
+
+.video h3 {
+  margin-bottom: 16px;
+  color: rgb(28, 26, 34);
+  font-weight: 700;
+  font-size: 1.2rem;
+}
+
+.video h4 {
+  line-height: 1.2;
+  color: rgb(90, 89, 93);
+}
+
+.thesis-secondary {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 32px 24px;
+  width: 40%;
+  padding-left: 32px;
+  border-left: solid 1px rgb(190, 189, 193);
+}
+
+.thesis-secondary-content {
+  display: inline-flex;
+  align-items: center;
+  padding-bottom: 24px;
+}
+
+ .thesis-secondary-content img {
+   object-fit: cover;
+   height: auto;
+ }
+
+ .thesis-secondary-content h3 {
+   font-weight: 700;
+   font-size: 1.2rem;
+   margin-bottom: 12px;
+ }
+
+ .thesis-secondary-content h4 {
+   color: rgb(90, 89, 93);
+   font-size: .8rem;
+   line-height: 1.1;
+   margin-bottom: 24px;
+ }
